@@ -2,7 +2,9 @@
 #ifndef _STRIO_H
 #define _STRIO_H
 
-char *fsplitword(FILE *f, char splitchar);
+#include <physfs.h>
+
+char *fsplitword(PHYSFS_file *f, char splitchar);
 char *splitword(char *s, char splitchar);
 
 #endif
